--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,61 @@
 .header {
   width: 100%;
-  margin: 0;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 8px;
+  padding-bottom: 8px;
   display: inline-block;
   background-color: #efefef;
 }
 
 .homeButton {
-    margin: 0;
-    margin-left: 25%;
-    font-size: 20px;
-    font-weight: bold;
-    color: #555555;
-    background-color: #efefef;
-    border: none;
-    text-decoration: none;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  margin-left: 25%;
+  float: left;
+  font-size: 20px;
+  font-weight: bold;
+  color: #555555;
+  background-color: #efefef;
+  display: inline-block;
+  text-decoration: none;
 }
 
 .homeButton:hover {
   color: #055055;
 }
 
-.imageContainer {
-  position: relative;
-  width: 100%;
+.listMenu {
+  max-width: 30%;
   margin: 0;
   padding: 0;
-  text-align: center;
+  margin-right: 25%;
+  display: inline-block;
+  float: right;
+  list-style-type: none;
+}
+
+.menuItem {
+  padding-left: 8px;
+  padding-right: 8px;
+  text-decoration: none;
+  font-size: 20px;
+  float: right;
+  color: #555555;
+}
+
+.menuItem:hover {
+  color: #055055;
+}
+
+.search {
+  padding: 8px;
+  width: 200px;
+  font-size: 20px;
+  display: block;
+  color: #555555;
+}
+
+.imageContainer {
+  width: 100%;
 }
 
 .bannerImage {
@@ -62,39 +90,39 @@
 }
 
 .showManufacturers {
-  width: 100%;
   padding: 8px;
-  background-color: #fbfbfb;
+  background-color: #efefef;
   color: #555555;
   text-decoration: none;
   border: none;
-  font-size: 14px;
+  display: inline-block;
+  font-size: 20px;
   -webkit-transition-duration: 0.4s; /* Safari */
   transition-duration: 0.4s;
 }
 
 .showManufacturers:hover {
-  background-color: #aaaaaa;
-  color: white;
+  background-color: #eeeeee;
+  color: #055055;
 }
 
 .menuButton {
   width: 10%;
-  margin-right: 25%;
+  margin-right: 20px;
   display: inline-block;
   float: right;
 }
 
 .menu {
-  width: 100%;
   max-height: 250px;
   overflow-y: scroll;
 }
 
 .menu1 {
-  width: 10%;
-  float: right;
-  margin-right: 25%;
+  position: absolute;
+  display: block;
+  width: 200px;
+  z-index: 1;
 }
 
 .manufacturer {
