--- a/src/App.css
+++ b/src/App.css
@@ -178,6 +178,7 @@
 }
 
 .vehicle {
+  position: relative;
   width: 40%;
   min-height: 150px;
   padding-top: 20px;
@@ -229,6 +230,22 @@
   font-weight: bold;
   color: #cccccc;
   letter-spacing: 10px;
+}
+
+.star {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  right: 5%;
+  bottom: 10%;
+  background-color: #f9f9f9;
+  margin: 0;
+  padding: 0;
+  background: url(./Components/images/star_border.png) no-repeat center center/contain;
+}
+
+.star:hover {
+  background-image: url(./Components/images/star.png);
 }
 
 .footer {
