--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
 }
 
 .homeButton {
-  padding-top: 8px;
-  padding-bottom: 8px;
+  padding-top: 0.8rem;
+  padding-bottom: 0.8rem;
   margin-left: 25%;
   float: left;
   font-size: 20px;
@@ -34,8 +34,8 @@
 }
 
 .menuItem {
-  padding-left: 8px;
-  padding-right: 8px;
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
   text-decoration: none;
   font-size: 20px;
   float: right;
@@ -113,16 +113,31 @@
   float: right;
 }
 
-.menu {
+.menu1 {
   max-height: 250px;
   overflow-y: scroll;
-}
-
-.menu1 {
   position: absolute;
   display: block;
   width: 200px;
   z-index: 1;
+}
+
+.accountMenu {
+  max-height: 250px;
+  position: absolute;
+  display: block;
+  width: 150px;
+  z-index: 1;
+}
+
+.accountIcon {
+  width: 2.5rem;
+  height: 2.5rem;
+  padding: 3px;
+}
+
+.accountIcon:hover {
+  background-color: #dddddd;
 }
 
 .manufacturer {
